--- a/templates/payement/index.html.twig
+++ b/templates/payement/index.html.twig
@@ -1,8 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}{% endblock %}
+ {% block javascripts %}
+        <script type="text/javascript">
+      // Create an instance of the Stripe object with your publishable API key
+      var stripe = Stripe('pk_test_51IwFOmADE3jmpw8FkSgFnbo4B32i5VOAoqSzJ9b8A3GJLLExVrnJtb0TFwq9gFNp2IQXaQXrDI3OHUQ9OYtLZ16v00pXn4mob4');
+      var checkoutButton = document.getElementById('checkout-button');
 
+      checkoutButton.addEventListener('click', function() {
+        // Create a new Checkout Session using the server-side endpoint you
+        // created in step 3.
+        fetch('/create-checkout-session', {
+          method: 'POST',
+        })
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(session) {
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function(result) {
+          // If `redirectToCheckout` fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using `error.message`.
+          if (result.error) {
+            alert(result.error.message);
+          }
+        })
+        .catch(function(error) {
+          console.error('Error:', error);
+        });
+      });
+    </script>    
+        {% endblock %}
 {% block body %}
 <h1>Acheter dans produit</h1>
-<button type="submit" class="btn btn-success" >Payer En Ligne</button>
+    <button id="checkout-button"  >Payer en ligne </button>
 {% endblock %}
