--- a/templates/payement/index.html.twig
+++ b/templates/payement/index.html.twig
@@ -35,5 +35,4 @@
         {% endblock %}
 {% block body %}
 <h1>Acheter dans produit</h1>
-    <button id="checkout-button"  >Payer en ligne </button>
-{% endblock %}
+ <a href="{{ path('checkout') }}"><button type="submit" class="btn btn-warning" > PAYER</button></a>{% endblock %}
