--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -38,7 +38,7 @@
       <th scope="col">{{ user.password }}</th>
       <th scope="col">{{ user.roles ? user.roles|join(', ') : '' }}</th>
       <th scope="col">{{ user.age }}</th>
-      <th scope="col"><img src="{{ asset('img/') }}{{ user.image }}"
+      <th scope="col"><img src="{{ asset('uploads/') }}{{ user.image }}"
                                     style="width:80px;height:80px" alt=""></th>
       <th scope="col">
       <div class="btn-group" role="group" aria-label="Basic mixed styles example">
