--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -18,7 +18,7 @@
   <thead>
     <tr>
     <th scope="col">Image</th>
-      <td scope="col"><img src="{{ asset('img/') }}{{ user.image }}"
+      <td scope="col"><img src="{{ asset('uploads/') }}{{ user.image }}"
                                     style="width:100px;height:100px" alt=""> </td>
                                     </tr>
     <tr>
