--- a/templates/demande/index.html.twig
+++ b/templates/demande/index.html.twig
@@ -1,42 +1,54 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Demande index{% endblock %}
+<html>
+{% block title %}{% endblock %}
+{% block stylesheets %}
+           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        {% endblock %}
 
+        {% block javascripts %}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+        {% endblock %}
+        <body style="background-image: url('/images/markus.jpg')">
 {% block body %}
-    <h1>Demande index</h1>
+    <h1><center>Liste de demandes</center></h1>
 
     <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Description</th>
-                <th>Type</th>
-                <th>Date_d</th>
-                <th>Date_f</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for demande in demandes %}
-            <tr>
-                <td>{{ demande.id }}</td>
-                <td>{{ demande.description }}</td>
-                <td>{{ demande.type }}</td>
-              
-                <td>{{ demande.dateD ? demande.dateD|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ demande.dateF ? demande.dateF|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('demande_show', {'id': demande.id}) }}">show</a>
-                    <a href="{{ path('demande_edit', {'id': demande.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('demande_new') }}">Create new</a>
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Description</th>
+      <th scope="col">Type</th>
+      <th scope="col">Date-d</th>
+      <th scope="col">Date-f</th>
+      <th scope="col">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% for demande in demandes %}
+    <tr>
+    
+      <th scope="col">{{ demande.id  }}</th>
+      <th scope="col">{{ demande.description }}</th>
+      <th scope="col">{{demande.type   }}</th>
+      <th scope="col">{{ demande.dateD ? demande.dateD|date('Y-m-d H:i:s') : '' }}</th>
+      <th scope="col">{{ demande.dateF ? demande.dateF|date('Y-m-d H:i:s') : ''  }}</th>
+     <th>
+      <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+   <center><a href ="{{ path('demande_show', {'id': demande.id}) }}"><button type="submit" class="btn btn-success" >Show</button></center>
+   
+    <center><a href ="{{ path('demande_edit', {'id': demande.id}) }}"><button type="submit" class="btn btn-warning" >Update</button></center>
+    
+</div>
+      </th>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+ {% if is_granted('ROLE_ADMIN') %}
+    <a href="{{ path('app_register') }}"><button type="submit" class="btn btn-warning" >Create new</button></a>
+    {% endif %}
+</body>
 {% endblock %}
+</html>
