--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+  <div class="form-control">
+    <i class="fa fa-calendar" style = "color"></i> {{ form_label(form.description) }}
+    {{ form_widget(form.description) }}</div>
+
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
